--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <h2>Get in Touch</h2>
     <p>Ready to take your business to the next level? Let's discuss your project. Provide as much details as possible for best assessment of your project</p>
     
-    <form class="contact-form" action="https://formsubmit.co/fintasticapps@gmail.com" method="POST">
+    <form class="contact-form" action="https://formsubmit.co/aaaiworld.services@gmail.com" method="POST">
         <input type="hidden" name="_subject" value="New inquiry from website">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_next" value="thank-you.html">
